        to diasbale access mode.
        * Add access highlight infra

2012-06-30  Artem Popov

	* Fix panel theme_hook handling for scaling

2012-07-01  Gustavo Sverzut Barbieri (k-s)

	* Add and use elm_widget_item_widget_get()
	* Fix elm_segment_control to not abuse user's data from item.

2012-07-03  Cedric Bail

	* Initialize Emotion when necessary.

2012-07-03  Minseok Kim

	* Add elm_multibuttonentry_editable_set() and
        elm_multibuttonentry_editable_get()

2012-07-03  Shinwoo Kim (kimcinoo)

	* Add access hook to widget infra.

2012-07-05  Carsten Haitzler (The Rasterman)

	* Fix several FB related issues:
          * Fallback to FB from X11 so it "just works"
          * Config expected x11 and failed to start app if engine not
            explicitly set to non-x11
          * No mouse cursor displayed in fb when needed, so add a
            softcursor mode defaulting to auto.
        * Add elm_win_screen_dpi_get()
        
2012-07-06  Shinwoo Kim (kimcinoo)

	* Add layout access enable/disable api:
          * elm_layout_edje_object_can_access_set/get()

2012-07-07  Carsten Haitzler (The Rasterman)

	* Add slider popup mode (based in idea originally proposed in
          patches from Sumanth Krishna Mannam, but susbequently rejected
          a few times as it didn't measure up to commitable standards).

2012-07-10  Gustavo Lima Chaves

	* Add elm_scroller_page_size_get() and
	  elm_scroller_page_relative_get() for consistency (some scrolling
	  widgets got these gettes before).

2012-07-10  Rob Bradford

	* Expose into private API a function for getting the X window from an
	Ecore_Evas using the backend safe functions.
	* Use this new API to replace a non backend safe call in the copy and
	paste code

2012-07-12  Tae-Hwan Kim (Bluezery)

	* Fix that vertical bounce enable value can be get from elm_config
	when the genlist is added.

2012-07-16  Carsten Haitzler (The Rasterman)

	* Disable html mode pastes from cnp to work around thunderbird.
